Tidied up layout. Added "Enter" button, demoted "Join", "Leave" and "Edit" to text links that show up below the shiny colorful "Enter" and "Discussions" buttons. This also avoids the layout breakage that happened when we had "Leave", "Edit" and "Discussions" all as giant buttons in a nice little row.

--- a/pages/css/whirleds.css
+++ b/pages/css/whirleds.css
@@ -22,18 +22,22 @@
   color: #408AB9;
 }
 
+.whirledDetail .Bits {
+  font-size: 12px;
+}
+
+.whirledDetail .Bits table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .whirledDetail .Bits .Name {
   font-size: 18px;
   font-weight: bold;
   color: #204260;
 }
 
-.whirledDetail .Bits .Blurb {
-  font-size: 12px;
-}
-
 .whirledDetail .Bits .Established {
-  font-size: 12px;
   font-style: italic;
 }
 
@@ -54,10 +58,6 @@
   color: #999999;
   font-size: 12px;
   padding: 0px 10px;
-}
-
-.whirledDetail .Charter {
-  margin: 0px 10px;
 }
 
 /* GroupList specific formattting */
